--- a/templates/home_festival.html
+++ b/templates/home_festival.html
@@ -168,9 +168,9 @@
                         </h5>
                         <h6 class="card-subtitle mb-2 text-muted">{{ perf.genre }}</h6>
                         <p class="card-text">
-                            <strong>Day:</strong> {{ perf.day }}<br>
-                            <strong>Time:</strong> {{ perf.start_time }} ({{ perf.duration_minutes }} mins)<br>
-                            <strong>Stage:</strong> {{ perf.stage_name }}
+                            <strong>Giorno:</strong> {{ perf.day }}<br>
+                            <strong>Orario:</strong> {{ perf.start_time }} ({{ perf.duration_minutes }} mins)<br>
+                            <strong>Palco:</strong> {{ perf.stage_name }}
                         </p>
 
                         <p class="text-warning fw-bold"><small>BOZZA - Non Visibile al Pubblico</small></p>
@@ -196,9 +196,9 @@
                         <h5 class="card-title">{{ perf.artist_name }}</h5>
                         <h6 class="card-subtitle mb-2 text-muted">{{ perf.genre }}</h6>
                         <p class="card-text">
-                            <strong>Day:</strong> {{ perf.day }}<br>
-                            <strong>Time:</strong> {{ perf.start_time }} ({{ perf.duration_minutes }} mins)<br>
-                            <strong>Stage:</strong> {{ perf.stage_name }}
+                            <strong>Giorno:</strong> {{ perf.day }}<br>
+                            <strong>Orario:</strong> {{ perf.start_time }} ({{ perf.duration_minutes }} mins)<br>
+                            <strong>Palco:</strong> {{ perf.stage_name }}
                         </p>
 
                     </div>
