--- a/templates/performance_detail.html
+++ b/templates/performance_detail.html
@@ -52,7 +52,7 @@
         </div>
         <div class="col-md-7">
             <h1 style="font-family: 'Playfair Display', serif;">{{ performance.artist_name }}</h1>
-            <p class="lead">Genre: {{ performance.genre }}</p>
+            <p class="lead">Genere: {{ performance.genre }}</p>
             <hr>
             <h4 style="font-family: 'Playfair Display', serif;">Informazioni</h4>
             <ul class="list-unstyled">
@@ -95,7 +95,7 @@
                         Log in
                     </a>
                     or <a type="button" class="btn btn-primary unreg_btn mybuttoncolors"
-                        href="{{url_for('register')}}">register</a> come un partecipante per acquistare un biglietto.
+                        href="{{url_for('register')}}">register</a> come partecipante per acquistare un biglietto.
                 </p>
             </div>
             {% endif %}
