--- a/templates/manage_performance.html
+++ b/templates/manage_performance.html
@@ -68,7 +68,7 @@
                     <!-- PREVIEW IMMAGINE -->
                     <small class="form-text text-muted">Immagine Attuale: <img
                             src="{{ url_for('static', filename=performance.image_path) }}" alt="Current image"
-                            style="max-height: 50px; margin-top: 5px;"></small>
+                            class="myperfimageedit"></small>
                     {% endif %}
                 </div>
             </div>
