--- a/templates/profile_festival.html
+++ b/templates/profile_festival.html
@@ -32,7 +32,8 @@
                 <div class="card-header">{{ user_ticket.ticket_type_name }}</div>
                 <div class="card-body">
                     <h5 class="card-title">Valido per: {{ user_ticket.valid_days_list | join(', ') }}</h5>
-                    <p class="card-text"><small class="text-muted">Comprato in Data: {{ user_ticket.purchase_date.split('
+                    <p class="card-text"><small class="text-muted">Comprato in Data: {{
+                            user_ticket.purchase_date.split('
                             ')[0] }}</small></p>
                 </div>
             </div>
@@ -44,7 +45,8 @@
             <!-- SEZIONE ORGANIZZATORI -->
             {% elif current_user.role == 'organizer' %}
             <h3 style="font-family: 'Playfair Display', serif;">My Managed Performances</h3>
-            <a href="{{ url_for('manage_performance') }}" class="btn mynewperfbutton mb-3">Aggiungi una Nuova Performance</a>
+            <a href="{{ url_for('manage_performance') }}" class="btn mynewperfbutton mb-3">Aggiungi una Nuova
+                Performance</a>
             {% if performances %}
             <div class="list-group">
                 {% for perf in performances %}
@@ -52,7 +54,8 @@
                 <div
                     class="list-group-item list-group-item-action flex-column align-items-start {% if not perf.is_published %}list-group-item-warning{% endif %}">
                     <div class="d-flex w-100 justify-content-between">
-                        <h5 class="mb-1">{{ perf.artist_name }} <small>({{ perf.day }} alle {{ perf.start_time }})</small>
+                        <h5 class="mb-1">{{ perf.artist_name }} <small>({{ perf.day }} alle {{ perf.start_time
+                                }})</small>
                         </h5>
                         <small>{{ perf.stage_name }}</small>
                     </div>
@@ -66,7 +69,7 @@
                         <a href="{{ url_for('manage_performance', perf_id=perf.id) }}"
                             class="btn btn-sm myeditbutton">Modifica</a>
                         <form action="{{ url_for('publish_performance', perf_id=perf.id) }}" method="POST"
-                            style="display: inline;">
+                            class="mybuttoninline">
                             <button type="submit" class="btn btn-sm mybuttoncolors">Pubblica</button>
                         </form>
                         {% else %}
@@ -74,8 +77,7 @@
                         {% endif %}
                         {% if perf.organizer_id == current_user.id %}
                         <form action="{{ url_for('delete_performance_route', perf_id=perf.id) }}" method="POST"
-                            style="display: inline;"
-                            onsubmit="return confirm('Are you sure you want to delete this performance? This action cannot be undone.');">
+                            class="mybuttoninline">
 
                             <button type="submit" class="btn btn-sm btn-danger ms-1">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
