--- a/static/css/style_festival.css
+++ b/static/css/style_festival.css
@@ -26,7 +26,7 @@ body {
     border: 1px solid #ccc;
     border-radius: 0.375rem;
     box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075);
-    
+
 
 }
 
@@ -57,7 +57,7 @@ main.container {
 .mycarousel .carousel-item img {
     object-fit: cover;
     width: 100%;
-    height: 100%; /* Fai sì che l'immagine riempia l'altezza del carousel-item */
+    height: 100%; /* Fa sì che l'immagine riempia l'altezza del carousel-item */
    
 }
 
@@ -280,8 +280,9 @@ header.sticky-top {
 }
 /* end CHECKOUT SECTION */
 
-/* Padding-top personalizzato per il main in base alla dimensione dello schermo */
+
 @media (max-width: 576px) {
+    /* Padding-top personalizzato per il main in base alla dimensione dello schermo */
     main {
         padding-top: 240px !important;
     }
